--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* .App {
+.App {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -6,10 +6,10 @@
   align-items: center;
   justify-content: center;
   background-color: grey;
-
 }
+
 
 body {
   margin: 0;
   padding: 0;
-} */
+}
